@@ -36,7 +36,7 @@ dependencies {
     // Paper API
     compileOnly("io.papermc.paper:paper-api:1.20-R0.1-SNAPSHOT")
     // LuaJava (cannot be easily relocated or downloaded at runtime)
-    implementation("party.iroiro.luajava:luajava:4.0.3-SNAPSHOT") // Use our fork of the LuaJava library
+    implementation("party.iroiro.luajava:luajava:$luaJavaVersion") // Use our fork of the LuaJava library
     implementation("party.iroiro.luajava:luajit:$luaJavaVersion")
     implementation("party.iroiro.luajava:lua54:$luaJavaVersion")
     implementation("org.bstats:bstats-bukkit:3.1.0")
@@ -49,7 +49,9 @@ paper {
     main = "win.templeos.lualink.LuaLink"
     apiVersion = "1.20"
     generateLibrariesJson = true
-    authors = listOf("Saturn745")
+    authors = listOf("Saturn745", "Grabsky")
+    website = "https://lualink.github.io/docs/"
+    description = "A Lua plugin for Paper servers, allowing you to run Lua scripts and commands in Minecraft."
     loader = "win.templeos.lualink.PluginLibrariesLoader"
     // This allows the plugin to access external plugins' APIs without depending on them.
     // This may cause conflicts if different versions of the same dependency are loaded by different plugins.
@@ -91,6 +93,11 @@ tasks {
         // This is the only required configuration besides applying the plugin.
         // Your plugin's jar (or shadowJar if present) will be used automatically.
         minecraftVersion("1.21.5")
+
+        // Make sure runServer is ran with -add-opens=java.base/java.util=ALL-UNNAMED
+        jvmArgs(
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+        )
     }
     shadowJar {
         archiveBaseName.set("LuaLink")
